# Kat

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build-release.yml
completions/: _kat  _kat.ps1  kat.bash  kat.elv  kat.fish
scripts/: download-latest.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: config.rs  get.rs  init.rs  mod.rs  open.rs  submit.rs  test.rs  watch.rs
src/utils/: config.rs  fileutils.rs  mod.rs  webutils.rs
templates/: config.toml  kat.toml  template.c  template.cpp  template.java  template.py  template.rs
