[package]
name = "kat"
description = "A command line tool for interacting with the problem solving website Kattis."
authors = ["Viggo Gascou"]
readme = "README.md"
repository = "https://github.com/viggo-gascou/kat"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.4.6"
color-eyre = { version = "0.6.2" }
config = { version = "0.13.4", features = ["toml", "ini"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
glob = "0.3.1"
notify = "6.1.1"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["cookies", "multipart", "blocking"] }
scraper = "0.18.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
shellexpand = "3.1.0"
shlex = "1.2.0"
tempfile = "3.8.1"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
webbrowser = "0.8.12"
zip = "0.6.6"

[build-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.4.6"
